second time lucky

--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-<link href="bye.css">
+<link href="bye.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title></title>
 </head>
 <body>
-<script src="hello.js"></script>
+<section class="a">
+    <h1>random number generator</h1>
+    <div id="main"><input type="text" name="random_number">     <!--input type="text".. means textbox -->
+    <button name="calculate">calculate</button> </div>
+</section>
 
+
+
+<script src="hello.js"></script>
 </body>
 </html>
