training for functions

--- a/html/JsFundamentals101-4.html
+++ b/html/JsFundamentals101-4.html
@@ -5,6 +5,7 @@
     <title></title>
 </head>
 <body>
-<script src="hello.js"></script>
+
 </body>
+    <script src="../javascript/JsFundamentals-101-4.js"></script>
 </html>
