--- a/html/index.html
+++ b/html/index.html
@@ -22,6 +22,6 @@ document.write(Number.MAX_VALUE+ "<br />");
 document.write(Number.MIN_VALUE+ "<br />");
 </script>
 
-<script src="hello.js"></script>
+<script src="../javascript/hello.js"></script>
 </body>
 </html>
