--- a/html/tutorial.html
+++ b/html/tutorial.html
@@ -3,8 +3,12 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    head stuff
 </head>
 <body>
-
+some other stuff
+<script src="../javascript/test.js"></script>
+Terry
 </body>
+
 </html>
